--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
   
   <body>
   
-  <script type='text/javascript'><!--// <![CDATA[
-    OA_show(9511);
-// ]]> --></script><noscript><a target='_blank' href='http://servedby.revive-adserver.net/ck.php?n=5e3193c'><img border='0' alt='' src='http://servedby.revive-adserver.net/avw.php?zoneid=9511&amp;n=5e3193c' /></a></noscript>
-
  
-    
+    <!-- Revive Adserver Hosted edition - Ad Management iFrame Tag - Generated with Revive Adserver v5.2.1 -->
+<iframe id='a187d238' name='a187d238' src='http://servedby.revive-adserver.net/afr.php?zoneid=9517&amp;cb=INSERT_RANDOM_NUMBER_HERE' frameborder='0' scrolling='no' width='468' height='60' allow='autoplay'><a href='http://servedby.revive-adserver.net/ck.php?n=a5e96571&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://servedby.revive-adserver.net/avw.php?zoneid=9517&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=a5e96571' border='0' alt='' /></a></iframe>
+
     
     <div class="container">
       <div id="autocomplete"></div>
